Bug 153916 - knotes crash after searching on notes
Summary: knotes crash after searching on notes
Status: RESOLVED FIXED
Alias: None
Product: knotes
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-12-12 17:42 UTC by FiNeX
Modified: 2008-12-15 18:00 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Backtrace of the crash (3.38 KB, text/plain)
2007-12-12 17:42 UTC, FiNeX
Details

Note You need to log in before you can comment on or make changes to this bug.
Description FiNeX 2007-12-12 17:42:11 UTC
Version:            (using KDE Devel)
Installed from:    Compiled sources

Knotes (SVN 74761) crash after *every* search.

1) start knotes
2) open search dialog (RMB on knotes on system tray)
3) search a string
4) knotes will crash

Backtrace included.
Comment 1 FiNeX 2007-12-12 17:42:42 UTC
Created attachment 22506 [details]
Backtrace of the crash
Comment 2 FiNeX 2008-05-27 11:48:12 UTC
It still crash on revision 813221.


Application: KNotes (knotes), signal SIGSEGV
 [?1034hUsing host libthread_db library "/lib/libthread_db.so.1".
[Thread debugging using libthread_db enabled]
[New Thread 0xb56766d0 (LWP 4443)]
[KCrash handler]
#6  KNote::find (this=0x6, pattern=@0xbff8e8f8, options=0)
    at /home/test/KDE4/kdesvn/kdepim/knotes/knote.cpp:235
#7  0x0805f1c3 in KNotesApp::slotFindNext (this=0x816f400)
    at /home/test/KDE4/kdesvn/kdepim/knotes/knotesapp.cpp:459
#8  0x0806138d in KNotesApp::qt_metacall (this=0x816f400, 
    _c=QMetaObject::InvokeMetaMethod, _id=6, _a=0xbff8e9c8)
    at /home/test/KDE4/kdesvn/build/kdepim/knotes/knotesapp.moc:121
#9  0xb7ea78fb in QMetaObject::activate (sender=0x8263828, 
    from_signal_index=<value optimized out>, to_signal_index=33, argv=0x0)
    at /home/test/KDE4/kdesvn/qt-copy/src/corelib/kernel/qobject.cpp:3007
#10 0xb7ea7e52 in QMetaObject::activate (sender=0x8263828, m=0x8089868, 
    local_signal_index=6, argv=0x0)
    at /home/test/KDE4/kdesvn/qt-copy/src/corelib/kernel/qobject.cpp:3080
#11 0x08072669 in KNote::sigFindFinished (this=0x8263828)
    at /home/test/KDE4/kdesvn/build/kdepim/knotes/knote.moc:179
#12 0x08072b97 in KNote::slotFindNext (this=0x8263828)
    at /home/test/KDE4/kdesvn/kdepim/knotes/knote.cpp:258
#13 0x0807a896 in KNote::qt_metacall (this=0x8263828, 
    _c=QMetaObject::InvokeMetaMethod, _id=20, _a=0xbff8eae8)
    at /home/test/KDE4/kdesvn/build/kdepim/knotes/knote.moc:127
#14 0xb7ea78fb in QMetaObject::activate (sender=0x8464440, 
    from_signal_index=<value optimized out>, to_signal_index=6, argv=0x0)
    at /home/test/KDE4/kdesvn/qt-copy/src/corelib/kernel/qobject.cpp:3007
#15 0xb7ea7e52 in QMetaObject::activate (sender=0x8464440, m=0xb720b824, 
    local_signal_index=2, argv=0x0)
    at /home/test/KDE4/kdesvn/qt-copy/src/corelib/kernel/qobject.cpp:3080
#16 0xb702c707 in KFind::findNext (this=0x8464440)
    at /home/test/KDE4/kdesvn/build/kdelibs/kdeui/kfind.moc:108
#17 0xb702c72f in KFind::Private::_k_slotFindNext (this=0x845a720)
    at /home/test/KDE4/kdesvn/kdelibs/kdeui/findreplace/kfind.cpp:567
#18 0xb702c88e in KFind::qt_metacall (this=0x8464440, 
    _c=QMetaObject::InvokeMetaMethod, _id=5, _a=0xbff8ebe8)
    at /home/test/KDE4/kdesvn/build/kdelibs/kdeui/kfind.moc:83
#19 0xb7ea78fb in QMetaObject::activate (sender=0x820e0d8, 
    from_signal_index=<value optimized out>, to_signal_index=41, argv=0x0)
    at /home/test/KDE4/kdesvn/qt-copy/src/corelib/kernel/qobject.cpp:3007
#20 0xb7ea7e52 in QMetaObject::activate (sender=0x820e0d8, m=0x808dce8, 
    local_signal_index=6, argv=0x0)
    at /home/test/KDE4/kdesvn/qt-copy/src/corelib/kernel/qobject.cpp:3080
#21 0xb6ff16a7 in KDialog::user1Clicked (this=0x820e0d8)
    at /home/test/KDE4/kdesvn/build/kdelibs/kdeui/kdialog.moc:229
#22 0xb6ff432d in KDialog::slotButtonClicked (this=0x820e0d8, button=4096)
    at /home/test/KDE4/kdesvn/kdelibs/kdeui/dialogs/kdialog.cpp:915
#23 0xb6ff5924 in KDialog::qt_metacall (this=0x820e0d8, 
    _c=QMetaObject::InvokeMetaMethod, _id=33, _a=0xbff8ed7c)
    at /home/test/KDE4/kdesvn/build/kdelibs/kdeui/kdialog.moc:181
#24 0xb7ea78fb in QMetaObject::activate (sender=0x843b790, 
    from_signal_index=<value optimized out>, to_signal_index=4, 
    argv=0xbff8ed7c)
    at /home/test/KDE4/kdesvn/qt-copy/src/corelib/kernel/qobject.cpp:3007
#25 0xb7ea7e52 in QMetaObject::activate (sender=0x843b790, m=0xb7f31d78, 
    local_signal_index=0, argv=0xbff8ed7c)
    at /home/test/KDE4/kdesvn/qt-copy/src/corelib/kernel/qobject.cpp:3080
#26 0xb7eac693 in QSignalMapper::mapped (this=0x843b790, _t1=4096)
    at .moc/release-shared/moc_qsignalmapper.cpp:93
#27 0xb7eac76d in QSignalMapper::map (this=0x843b790, sender=0x813c5c8)
    at /home/test/KDE4/kdesvn/qt-copy/src/corelib/kernel/qsignalmapper.cpp:277
#28 0xb7eac95e in QSignalMapper::map (this=0x843b790)
    at /home/test/KDE4/kdesvn/qt-copy/src/corelib/kernel/qsignalmapper.cpp:268
#29 0xb7ead7fb in QSignalMapper::qt_metacall (this=0x843b790, 
    _c=QMetaObject::InvokeMetaMethod, _id=4, _a=0xbff8eefc)
    at .moc/release-shared/moc_qsignalmapper.cpp:80
#30 0xb7ea78fb in QMetaObject::activate (sender=0x813c5c8, 
    from_signal_index=<value optimized out>, to_signal_index=30, 
    argv=0xbff8eefc)
    at /home/test/KDE4/kdesvn/qt-copy/src/corelib/kernel/qobject.cpp:3007
#31 0xb7ea7bd0 in QMetaObject::activate (sender=0x813c5c8, m=0xb79c0ba4, 
    from_local_signal_index=2, to_local_signal_index=3, argv=0xbff8eefc)
    at /home/test/KDE4/kdesvn/qt-copy/src/corelib/kernel/qobject.cpp:3100
#32 0xb78faf21 in QAbstractButton::clicked (this=0x813c5c8, _t1=false)
    at .moc/release-shared/moc_qabstractbutton.cpp:185
#33 0xb768f6b9 in QAbstractButtonPrivate::emitClicked (this=0x845cdc0)
    at /home/test/KDE4/kdesvn/qt-copy/src/gui/widgets/qabstractbutton.cpp:543
#34 0xb7690474 in QAbstractButtonPrivate::click (this=0x845cdc0)
    at /home/test/KDE4/kdesvn/qt-copy/src/gui/widgets/qabstractbutton.cpp:536
#35 0xb76906d6 in QAbstractButton::mouseReleaseEvent (this=0x813c5c8, 
    e=0xbff8f53c)
    at /home/test/KDE4/kdesvn/qt-copy/src/gui/widgets/qabstractbutton.cpp:1112
#36 0xb73f6fc6 in QWidget::event (this=0x813c5c8, event=0xbff8f53c)
    at /home/test/KDE4/kdesvn/qt-copy/src/gui/kernel/qwidget.cpp:6927
#37 0xb768f55e in QAbstractButton::event (this=0x813c5c8, e=0xbff8f53c)
    at /home/test/KDE4/kdesvn/qt-copy/src/gui/widgets/qabstractbutton.cpp:1074
#38 0xb7725340 in QPushButton::event (this=0x813c5c8, e=0xbff8f53c)
    at /home/test/KDE4/kdesvn/qt-copy/src/gui/widgets/qpushbutton.cpp:658
#39 0xb73a55dc in QApplicationPrivate::notify_helper (this=0x813cb90, 
    receiver=0x813c5c8, e=0xbff8f53c)
    at /home/test/KDE4/kdesvn/qt-copy/src/gui/kernel/qapplication.cpp:3772
#40 0xb73acf55 in QApplication::notify (this=0xbff8fce0, receiver=0x813c5c8, 
    e=0xbff8f53c)
    at /home/test/KDE4/kdesvn/qt-copy/src/gui/kernel/qapplication.cpp:3501
#41 0xb70910fd in KApplication::notify (this=0xbff8fce0, receiver=0x813c5c8, 
    event=0xbff8f53c)
    at /home/test/KDE4/kdesvn/kdelibs/kdeui/kernel/kapplication.cpp:311
#42 0xb7e960a1 in QCoreApplication::notifyInternal (this=0xbff8fce0, 
    receiver=0x813c5c8, event=0xbff8f53c)
    at /home/test/KDE4/kdesvn/qt-copy/src/corelib/kernel/qcoreapplication.cpp:583
#43 0xb73ac253 in QApplicationPrivate::sendMouseEvent (receiver=0x813c5c8, 
    event=0xbff8f53c, alienWidget=0x813c5c8, nativeWidget=0x820e0d8, 
    buttonDown=0xb79cc6f0, lastMouseReceiver=@0xb79cc6f4)
    at ../../include/QtCore/../../../../qt-copy/src/corelib/kernel/qcoreapplication.h:218
#44 0xb7409e25 in QETWidget::translateMouseEvent (this=0x820e0d8, 
    event=0xbff8fa1c)
    at /home/test/KDE4/kdesvn/qt-copy/src/gui/kernel/qapplication_x11.cpp:4198
#45 0xb74092e5 in QApplication::x11ProcessEvent (this=0xbff8fce0, 
    event=0xbff8fa1c)
    at /home/test/KDE4/kdesvn/qt-copy/src/gui/kernel/qapplication_x11.cpp:3198
#46 0xb742eaec in x11EventSourceDispatch (s=0x813f6e0, callback=0, 
    user_data=0x0)
    at /home/test/KDE4/kdesvn/qt-copy/src/gui/kernel/qguieventdispatcher_glib.cpp:148
#47 0xb5b10f88 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#48 0xb5b144eb in g_main_context_iterate () from /usr/lib/libglib-2.0.so.0
#49 0xb5b14668 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#50 0xb7ebc678 in QEventDispatcherGlib::processEvents (this=0x811c148, flags=
      {i = -1074201640})
    at /home/test/KDE4/kdesvn/qt-copy/src/corelib/kernel/qeventdispatcher_glib.cpp:325
#51 0xb742e2a5 in QGuiEventDispatcherGlib::processEvents (this=0x811c148, 
    flags={i = -1074201592})
    at /home/test/KDE4/kdesvn/qt-copy/src/gui/kernel/qguieventdispatcher_glib.cpp:204
#52 0xb7e9482a in QEventLoop::processEvents (this=0xbff8fc70, flags=
      {i = -1074201528})
    at /home/test/KDE4/kdesvn/qt-copy/src/corelib/kernel/qeventloop.cpp:149
#53 0xb7e949ea in QEventLoop::exec (this=0xbff8fc70, flags={i = -1074201480})
    at /home/test/KDE4/kdesvn/qt-copy/src/corelib/kernel/qeventloop.cpp:196
#54 0xb7e96c4d in QCoreApplication::exec ()
    at /home/test/KDE4/kdesvn/qt-copy/src/corelib/kernel/qcoreapplication.cpp:845
#55 0xb73a5457 in QApplication::exec ()
    at /home/test/KDE4/kdesvn/qt-copy/src/gui/kernel/qapplication.cpp:3304
#56 0x0805db72 in main (argc=1, argv=0xbff8fde4)
    at /home/test/KDE4/kdesvn/kdepim/knotes/main.cpp:72
#0  0xb7f73424 in __kernel_vsyscall ()
Comment 3 Marc Schiffbauer 2008-12-15 12:39:41 UTC
same here witj knotes from KDE 4.2beta1 (4.1.80)

This is the BT I got:

Anwendung: KNotes (knotes), Signal SIGSEGV
[Current thread is 0 (LWP 11231)]

Thread 2 (Thread 0xb3847b90 (LWP 11234)):
#0  0xb7f0f430 in __kernel_vsyscall ()
#1  0xb5ad1c01 in select () from /lib/tls/i686/cmov/libc.so.6
#2  0xb5da1150 in ?? () from /usr/lib/libQtCore.so.4
#3  0xb5cd16ae in ?? () from /usr/lib/libQtCore.so.4
#4  0xb584550f in start_thread () from /lib/tls/i686/cmov/libpthread.so.0
#5  0xb5ad97ee in clone () from /lib/tls/i686/cmov/libc.so.6

Thread 1 (Thread 0xb516e6c0 (LWP 11231)):
[KCrash Handler]
#6  KNote::find (this=0x3107, pattern=@0xbfd103e8, options=0) at /build/buildd/kdepim-4.1.80/knotes/knote.cpp:234
#7  0x0805ec03 in KNotesApp::slotFindNext (this=0x91ee2d8) at /build/buildd/kdepim-4.1.80/knotes/knotesapp.cpp:461
#8  0x08060c1d in KNotesApp::qt_metacall (this=0x91ee2d8, _c=QMetaObject::InvokeMetaMethod, _id=12551, _a=0xbfd104b8) at /build/buildd/kdepim-4.1.80/obj-i486-linux-gnu/knotes/knotesapp.moc:121
#9  0xb5dd6a60 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#10 0xb5dd77e2 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#11 0x08072009 in KNote::sigFindFinished (this=0xd0f0f70) at /build/buildd/kdepim-4.1.80/obj-i486-linux-gnu/knotes/knote.moc:179
#12 0x08072537 in KNote::slotFindNext (this=0xd0f0f70) at /build/buildd/kdepim-4.1.80/knotes/knote.cpp:257
#13 0x08072944 in KNote::find (this=0xd0f0f70, pattern=@0xbfd105a8, options=0) at /build/buildd/kdepim-4.1.80/knotes/knote.cpp:242
#14 0x0805ec03 in KNotesApp::slotFindNext (this=0x91ee2d8) at /build/buildd/kdepim-4.1.80/knotes/knotesapp.cpp:461
#15 0x0805f058 in KNotesApp::slotOpenFindDialog (this=0x91ee2d8) at /build/buildd/kdepim-4.1.80/knotes/knotesapp.cpp:454
#16 0x08060c2d in KNotesApp::qt_metacall (this=0x91ee2d8, _c=QMetaObject::InvokeMetaMethod, _id=12551, _a=0xbfd1074c) at /build/buildd/kdepim-4.1.80/obj-i486-linux-gnu/knotes/knotesapp.moc:120
#17 0xb5dd6a60 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#18 0xb5dd6e60 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#19 0xb62825f1 in QAction::triggered () from /usr/lib/libQtGui.so.4
#20 0xb6282f5f in QAction::activate () from /usr/lib/libQtGui.so.4
#21 0xb6660564 in ?? () from /usr/lib/libQtGui.so.4
#22 0xb6660ff2 in QMenu::mouseReleaseEvent () from /usr/lib/libQtGui.so.4
#23 0xb7e06d35 in KMenu::mouseReleaseEvent (this=0x92449f0, e=0xbfd10e28) at /build/buildd/kde4libs-4.1.80/kdeui/widgets/kmenu.cpp:452
#24 0xb62e0962 in QWidget::event () from /usr/lib/libQtGui.so.4
#25 0xb66632e9 in QMenu::event () from /usr/lib/libQtGui.so.4
#26 0xb62888ec in QApplicationPrivate::notify_helper () from /usr/lib/libQtGui.so.4
#27 0xb62910e1 in QApplication::notify () from /usr/lib/libQtGui.so.4
#28 0xb7d19c6d in KApplication::notify (this=0xbfd116e0, receiver=0x92449f0, event=0xbfd10e28) at /build/buildd/kde4libs-4.1.80/kdeui/kernel/kapplication.cpp:307
#29 0xb5dc1e61 in QCoreApplication::notifyInternal () from /usr/lib/libQtCore.so.4
#30 0xb629036e in QApplicationPrivate::sendMouseEvent () from /usr/lib/libQtGui.so.4
#31 0xb62fa8de in ?? () from /usr/lib/libQtGui.so.4
#32 0xb62f99e5 in QApplication::x11ProcessEvent () from /usr/lib/libQtGui.so.4
#33 0xb63237aa in ?? () from /usr/lib/libQtGui.so.4
#34 0xb54706f8 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#35 0xb5473da3 in ?? () from /usr/lib/libglib-2.0.so.0
#36 0xb5473f61 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#37 0xb5dec478 in QEventDispatcherGlib::processEvents () from /usr/lib/libQtCore.so.4
#38 0xb6322ea5 in ?? () from /usr/lib/libQtGui.so.4
#39 0xb5dc052a in QEventLoop::processEvents () from /usr/lib/libQtCore.so.4
#40 0xb5dc06ea in QEventLoop::exec () from /usr/lib/libQtCore.so.4
#41 0xb5dc2da5 in QCoreApplication::exec () from /usr/lib/libQtCore.so.4
#42 0xb6288767 in QApplication::exec () from /usr/lib/libQtGui.so.4
#43 0x0805d5b2 in main (argc=3, argv=0xbfd117e4) at /build/buildd/kdepim-4.1.80/knotes/main.cpp:70

Comment 4 Sergio Martins 2008-12-15 18:00:44 UTC
SVN commit 897291 by smartins:

Fixed Find:

1. Increment the iterator, not the pointer (segfault)
2. Don't delete a QObject inside a slot it that QObject emitted the signal. (Segfault)
3. Fix 2 KFind dialogs appearing.
4. Fix highlightening

BUG: 153916





 M  +15 -14    knote.cpp  
 M  +3 -3      knote.h  
 M  +3 -3      knotesapp.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=897291