Fixed Find:

1. Increment the iterator, not the pointer (segfault)
2. Don't delete a QObject inside a slot it that QObject emitted the signal. (Segfault)
3. Fix 2 KFind dialogs appearing.
4. Fix highlightening

BUG: 153916




svn path=/trunk/KDE/kdepim/knotes/; revision=897291